--- a/frontend/src/komponente/css/ListaProizvoda.css
+++ b/frontend/src/komponente/css/ListaProizvoda.css
@@ -1,7 +1,7 @@
 .product-list {
-    display: flex; 
-    flex-wrap: wrap; 
-    gap: 20px; 
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
     padding: 20px;
     justify-content: center; 
 }
@@ -15,6 +15,9 @@
     transition: transform 0.2s, box-shadow 0.2s;
     width: 200px; 
     text-align: center; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-item:hover {
@@ -24,18 +27,18 @@
 
 .product-image {
     width: 100%;
-    height: 150px;
+    height: 170px;
     object-fit: cover;
 }
 
 .product-name {
-    font-size: 1.2em;
+    font-size: 1.1em;
     margin: 10px 0;
     color: #333;
 }
 
 .product-price {
     font-size: 1em;
-    margin: 0 0 10px;
+    margin: 10px 0;
     color: #666;
 }
