--- a/frontend/src/stranice/css/Home.css
+++ b/frontend/src/stranice/css/Home.css
@@ -1,22 +1,28 @@
-.h1 {
-    margin: 0; 
-    padding: 20px 0; 
-    text-align: center; 
-    font-size: 2em; 
-    color: #c2bebe; 
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    top: 75px;
-    left: 0;
-}
+
 
 .products {
     padding: 20px; 
 }
 
 .home{
-   
-    
-    
+    margin-top: 500px;
+}
+
+.filter {
+    display: flex;
+    justify-content: center;
+}
+
+.search-bar {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: border-color 0.3s;
+}
+
+.search-bar:focus {
+    border-color: #007BFF;
+    outline: none;
 }
