--- a/frontend/src/komponente/css/Header.css
+++ b/frontend/src/komponente/css/Header.css
@@ -23,10 +23,12 @@
     font-weight: bold;
     text-transform: uppercase;
     margin: 0;
+    cursor: pointer;
 }
 
 .header-nav {
     display: flex;
+    cursor: pointer;
 }
 
 .nav-list {
