--- a/frontend/src/komponente/css/ListaProizvoda.css
+++ b/frontend/src/komponente/css/ListaProizvoda.css
@@ -7,8 +7,8 @@
 }
 
 .product-item {
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: #2c2a2a;
+    border: 1px solid #323232;
     border-radius: 8px;
     overflow: hidden;
     cursor: pointer;
@@ -27,18 +27,18 @@
 
 .product-image {
     width: 100%;
-    height: 170px;
+    height: 200px;
     object-fit: cover;
 }
 
 .product-name {
     font-size: 1.1em;
     margin: 10px 0;
-    color: #333;
+    color: #e1e1e1;
 }
 
 .product-price {
     font-size: 1em;
     margin: 10px 0;
-    color: #666;
+    color: #d7d5d5;
 }
