--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,12 +18,12 @@
 html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
   background-image: url('https://www.amalgamcollection.com/cdn/shop/files/Wideedit_892066d1-8f5f-4c18-98cc-7bc44b7a2857_2000x850_crop_center.jpg?v=1705578909');
   background-size: cover; 
   background-attachment: fixed;
   background-position: center center; 
   background-repeat: no-repeat;
-  
 }
 
 
@@ -41,6 +41,7 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
+  padding-top: 50px;
   display: flex;
   place-items: center;
   min-width: 320px;
