--- a/frontend/src/komponente/css/Header.css
+++ b/frontend/src/komponente/css/Header.css
@@ -3,12 +3,15 @@
     color: white;
     padding: 20px 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    position:absolute;
+    z-index: 1000;
+    position:fixed;
     top: 0;
     left: 0;
-    right: 0;
-    z-index: 1000;
+    width: 100%;
+    box-sizing: border-box;
+    
 }
+
 
 .header-container {
     max-width: 1200px;
