--- a/frontend/src/komponente/css/ListaProizvoda.css
+++ b/frontend/src/komponente/css/ListaProizvoda.css
@@ -4,6 +4,10 @@
     gap: 20px;
     padding: 20px;
     justify-content: center; 
+    background-color: #1f1f1f;
+    border-radius: 10px;
+    
+
 }
 
 .product-item {
