--- a/frontend/src/stranice/css/Dashboard.css
+++ b/frontend/src/stranice/css/Dashboard.css
@@ -6,6 +6,22 @@
     height: 90vh;
 }
 
+.dodaj-dugme {
+    
+    background-color: #333;
+    color: #ecf0f1;
+    font-size:18px;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 20%;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    display: block;
+    margin: 10 auto;
+    margin-bottom: 20px;
+}
+
 .dashboard-content {
     display: flex;
     flex: 1;
