--- a/frontend/src/stranice/css/Proizvod.css
+++ b/frontend/src/stranice/css/Proizvod.css
@@ -17,10 +17,11 @@
 
 #proizvod-image {
     width: 100%;
-    max-width: 300px;
+    max-width: 670px;
     border-radius: 8px;
     object-fit: cover;
     margin-right: 20px;
+    margin-top: 100px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
