--- a/frontend/src/stranice/css/Register.css
+++ b/frontend/src/stranice/css/Register.css
@@ -58,6 +58,15 @@ label {
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
+.login-link {
+    display: block;
+    color: #1e90ff;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 14px;
+}
+
 .register-button:hover {
     background-color: #1c86ee;
     transform: translateY(-2px);
